--- a/app/src/main/res/layout/tip_records_fragment.xml
+++ b/app/src/main/res/layout/tip_records_fragment.xml
@@ -18,4 +18,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="Tip records"
         app:titleTextColor="#FFFFFF" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lstTip"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/tip_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
